# pluvio

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/pluvio/: __init__.py  client.py  constants.py  exceptions.py  models.py  types.py
src/pluvio/datasets/: __init__.py  base.py  constants.py
src/pluvio/datasets/cams/: air_quality.py  constants.py
src/pluvio/datasets/era5_land/: constants.py  precipitation.py  soil_moisture.py
src/pluvio/extras/scheduler/: __init__.py  tasks.py  utils.py
src/pluvio/extras/storage/: __init__.py  adapter.py  constants.py  models.py
src/pluvio/helpers/: utils.py
src/pluvio/models/: __init__.py  air_quality_record.py  air_quality_result.py  precipitation_record.py  precipitation_result.py  soil_moisture_record.py  soil_moisture_result.py
tests/: conftest.py
tests/datasets/: test_precipitation.py  test_soil_moisture.py
tests/extras/: test_scheduler.py  test_storage.py
