[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pluvio"
version = "0.2.0"
description = "Effortless Copernicus climate data ingestion — precipitation, atmospheric data and more."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "shadMod" }]
keywords = ["copernicus", "era5", "precipitation", "weather", "climate", "cds"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "cdsapi>=0.7.4",
    "xarray>=2024.1.0",
    "netCDF4>=1.7.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
polars = ["polars>=0.20"]
celery = ["celery[redis]>=5.3"]
sqlalchemy = ["sqlalchemy>=2.0", "psycopg2-binary>=2.9"]
all = ["pluvio[polars,celery,sqlalchemy]"]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "mypy", "pytest-mock"]

[tool.hatch.build.targets.wheel]
packages = ["src/pluvio"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true